# smartport-toolkit

./: README.md  main.py  pyproject.toml  requirements.txt  rokenbok_control.py  rokenbok_device.py  web.py
smartport-arduino/: README.md  smartport-arduino.ino  stepstools-testing.py
smartport-arduino-web/: README.md  index.html  rokenbok_control.py  rokenbok_device.py  smartport-arduino-web.py  upnp.py  web.py
smartport-arduino-web/static/: control.js  index.html
src/smartport_toolkit/: __init__.py
static/: control.js  index.html
