[project]
name = "smartport-webserver"
version = "0.0.1"
description = "A webserver to control Rokenbok over the internet"
readme = "README.md"
authors = [
    { name = "csev1755", email = "charlie@cssev.xyz" }
]
requires-python = ">=3.13"
dependencies = [
    "bidict==0.23.1",
    "blinker==1.9.0",
    "click==8.3.1",
    "flask==3.1.2",
    "flask-socketio==5.5.1",
    "h11==0.16.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "pyserial==3.5",
    "python-engineio==4.12.3",
    "python-socketio==5.15.0",
    "simple-websocket==1.1.0",
    "upnpy==1.1.8",
    "werkzeug==3.1.4",
    "wsproto==1.3.2",
]

[project.scripts]
smartport-toolkit = "smartport_toolkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
